--- a/packages/api-gateway/package.json
+++ b/packages/api-gateway/package.json
@@ -11,5 +11,12 @@
     "api-gateway"
   ],
   "author": "yugasun",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "joi": "^14.3.1",
+    "qcloudapi-sdk": "^0.2.1"
+  },
+  "devDependencies": {
+    "@types/joi": "^14.3.4"
+  }
 }
