--- a/packages/api-gateway/package.json
+++ b/packages/api-gateway/package.json
@@ -13,10 +13,17 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
+    "dot-qs": "^0.2.0",
     "joi": "^14.3.1",
-    "qcloudapi-sdk": "^0.2.1"
+    "object-assign": "^4.1.1",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
-    "@types/joi": "^14.3.4"
+    "@types/joi": "^14.3.4",
+    "@types/object-assign": "^4.0.30",
+    "@types/request": "^2.48.3",
+    "@types/request-promise-native": "^1.0.17"
   }
 }
