--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "tencent-serverless-sdk",
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
@@ -28,5 +29,6 @@
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-command": "^0.5.0"
-  }
+  },
+  "license": "MIT"
 }
