--- a/packages/capi/package.json
+++ b/packages/capi/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "@tss/api-gw",
-  "version": "0.0.0",
-  "description": "Tencent cloud api gateway sdk",
+  "name": "tss-capi",
+  "version": "0.1.0",
+  "description": "Tencent cloud api sdk",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "tencent-clound",
-    "api-gateway"
+    "api"
   ],
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
     "dot-qs": "^0.2.0",
-    "joi": "^14.3.1",
     "object-assign": "^4.1.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
@@ -23,7 +22,6 @@
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/joi": "^14.3.4",
     "@types/object-assign": "^4.0.30",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17"
