--- a/packages/api-gw/package.json
+++ b/packages/api-gw/package.json
@@ -13,7 +13,7 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
-    "tss-capi": "*",
+    "tss-capi": "0.1.0",
     "joi": "^14.3.1"
   },
   "devDependencies": {
