--- a/packages/capi/package.json
+++ b/packages/capi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tss-capi",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Tencent cloud api sdk",
   "main": "dist/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "dot-qs": "^0.2.0",
+    "moment": "^2.24.0",
     "object-assign": "^4.1.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
