--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna exec npm install && lerna link",
-    "build": "tsc -b tsconfig.json",
+    "build": "yarn build:proto && yarn build:ts",
+    "build:ts": "tsc -b tsconfig.json",
+    "bundle": "ts-node -P scripts/tsconfig.json scripts/bundle.ts umd,esm",
     "clean": "lerna clean --yes && lerna run clean && rimraf includes",
-    "release": "yarn bootstrap && yarn build:ts && lerna publish --exact",
+    "release": "yarn bootstrap && yarn bundle && lerna publish --exact",
     "format": "prettier --write '**/*.{ts,tsx}' --config .prettierrc"
   },
   "workspaces": [
@@ -17,16 +19,50 @@
     }
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
+    "@babel/plugin-proposal-do-expressions": "^7.6.0",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+    "@babel/plugin-proposal-function-sent": "^7.7.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
+    "@babel/runtime": "^7.7.2",
     "@types/node": "^12.12.6",
+    "chalk": "^3.0.0",
+    "cross-env": "^6.0.3",
+    "fancy-log": "^1.3.3",
     "husky": "^3.0.9",
     "lerna": "^3.18.3",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.0",
+    "rollup": "0.66.6",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-typescript2": "0.17.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2",
+    "typescript-json-schema": "^0.40.0",
     "webpack": "^4.41.2",
     "webpack-command": "^0.5.0"
   },
