--- a/packages/cos/package.json
+++ b/packages/cos/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.0",
   "description": "Tencent cloud cos sdk",
   "main": "dist/index.js",
+  "node": "dist/index.js",
+  "browser": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
+  "jsnext:main": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +17,13 @@
     "cos"
   ],
   "author": "yugasun",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yugasun/tencent-serverless-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yugasun/tencent-serverless-sdk/issues"
+  },
+  "homepage": "https://github.com/yugasun/tencent-serverless-sdk#readme"
 }
