--- a/packages/function/package.json
+++ b/packages/function/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tss-function",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "Tencent cloud serverlerss function sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
