--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   "command": {
     "publish": {
       "allowBranch": ["master", "dev"],
-      "message": "chore(release): publish %v"
+      "message": "chore(release): lerna publish"
     }
   }
 }
