--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tencent-serverless-sdk",
+  "name": "tencent-sdk",
   "private": true,
   "scripts": {
     "bootstrap": "lerna exec npm install && lerna link",
