--- a/packages/api-gw/package.json
+++ b/packages/api-gw/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node test/index.spec.ts",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo"
   },
   "keywords": [
     "tencent-clound",
