--- a/packages/function/package.json
+++ b/packages/function/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo"
   },
   "keywords": [
     "tencent-cloud",
