--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "ts-node ./test/index.spec.ts"
+    "test": "ts-node ./test/index.spec.ts",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo"
   },
   "keywords": [
     "tencent-cloud",
