--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "tencent-sdk",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap && yarn build:ts",
-    "build:ts": "tsc -b tsconfig.json",
+    "bootstrap": "lerna bootstrap",
     "bundle": "ts-node -P scripts/tsconfig.json scripts/bundle.ts umd,esm",
     "clean": "lerna clean --yes && lerna run clean",
     "release": "yarn bootstrap && yarn bundle && lerna publish --exact",
