chore(release): lerna publish
 - @tencent-sdk/api-gw@0.0.6
 - @tencent-sdk/capi@0.2.9
 - @tencent-sdk/cos@0.0.3-alpha.0
 - @tencent-sdk/function@0.0.3-alpha.0
 - @tencent-sdk/login@0.0.3

--- a/packages/function/package.json
+++ b/packages/function/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/function",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "Tencent cloud serverlerss function sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
