--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "bundle": "ts-node -P scripts/tsconfig.json scripts/bundle.ts umd,esm",
     "clean": "lerna clean --yes && lerna run clean",
     "release": "yarn bootstrap && yarn bundle && lerna publish --exact",
-    "format": "prettier --write '**/*.{ts,tsx}' --config .prettierrc"
+    "prettier": "prettier --check '**/*.{ts,tsx,md}' --config .prettierrc",
+    "prettier:fix": "prettier --write '**/*.{ts,tsx,md}' --config .prettierrc"
   },
   "workspaces": [
     "packages/*"
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md}": [
+      "prettier -c"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -45,8 +51,8 @@
     "fancy-log": "^1.3.3",
     "husky": "^3.0.9",
     "lerna": "^3.18.3",
+    "lint-staged": "^9.5.0",
     "prettier": "^1.18.2",
-    "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.0",
     "rollup": "0.66.6",
     "rollup-plugin-alias": "^1.4.0",
