chore(release): lerna publish
 - @tencent-sdk/api-gw@0.0.12-alpha.0
 - @tencent-sdk/capi@0.2.15-alpha.0
 - @tencent-sdk/cos@0.0.4-alpha.0
 - @tencent-sdk/function@0.0.4-alpha.0
 - @tencent-sdk/login@0.0.6-alpha.0

--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/login",
-  "version": "0.0.5",
+  "version": "0.0.6-alpha.0",
   "description": "Tencent cloud serverlerss login sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
