--- a/packages/capi/package.json
+++ b/packages/capi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/capi",
-  "version": "0.2.15-alpha.0",
+  "version": "0.2.15",
   "description": "Tencent cloud api sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
