--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "files": [],
   "references": [
-    { "path": "packages/api-gw" },
+    { "path": "packages/apigw" },
     { "path": "packages/cos" },
     { "path": "packages/function" },
-    { "path": "packages/capi" }
+    { "path": "packages/capi" },
+    { "path": "packages/capi-web" }
   ]
 }
