--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/yugasun/tencent-sdk#readme",
   "dependencies": {
     "@types/qrcode": "^1.3.4",
+    "@ygkit/request": "^0.0.6",
     "qrcode": "^1.4.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
