--- a/packages/apigw/package.json
+++ b/packages/apigw/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/apigw",
-  "version": "0.1.1-alpha.0",
+  "version": "0.1.1",
   "description": "Tencent cloud api gateway sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
@@ -25,7 +25,7 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
-    "@tencent-sdk/capi": "0.2.15",
+    "@tencent-sdk/capi": "0.2.16",
     "joi": "^14.3.1"
   },
   "devDependencies": {
