--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -32,14 +32,12 @@
   "homepage": "https://github.com/yugasun/tencent-sdk#readme",
   "dependencies": {
     "@types/qrcode": "^1.3.4",
+    "@types/uuid": "^3.4.6",
     "@ygkit/request": "^0.0.6",
     "qrcode": "^1.4.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "uuid": "^3.3.3"
-  },
-  "devDependencies": {
-    "@types/uuid": "^3.4.6"
   }
 }
