--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -34,10 +34,8 @@
     "@types/qrcode": "^1.3.4",
     "@types/uuid": "^3.4.6",
     "@ygkit/request": "^0.0.6",
+    "axios": "^0.20.0",
     "qrcode": "^1.4.4",
-    "querystring": "^0.2.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
     "uuid": "^3.3.3"
   }
 }
