--- a/packages/capi/package.json
+++ b/packages/capi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/capi",
-  "version": "1.0.2",
+  "version": "0.3.1",
   "description": "Tencent cloud api sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
@@ -24,7 +24,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/chalk": "^2.2.0",
-    "axios": "^0.20.0"
+    "@types/object-assign": "^4.0.30",
+    "@types/request": "^2.48.3",
+    "@types/request-promise-native": "^1.0.17",
+    "object-assign": "^4.1.1",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8"
   },
   "directories": {
     "test": "test"
