--- a/packages/apigw/package.json
+++ b/packages/apigw/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent-sdk/apigw",
-  "version": "0.1.4",
+  "version": "0.1.5-alpha.0",
   "description": "Tencent cloud api gateway sdk",
   "main": "dist/index.js",
   "node": "dist/index.js",
@@ -25,7 +25,7 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
-    "@tencent-sdk/capi": "1.0.2"
+    "@tencent-sdk/capi": "1.1.0"
   },
   "directories": {
     "test": "test"
