fix: support jest test

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "bundle": "ts-node -P scripts/tsconfig.json scripts/bundle.ts umd,esm",
+    "test": "jest",
     "clean": "lerna clean --yes && lerna run clean",
     "release": "yarn run bundle && lerna publish --exact",
     "prettier": "prettier --check '**/*.{ts,tsx,md}' --config .prettierrc",
@@ -48,8 +49,10 @@
     "@types/node": "^12.12.6",
     "chalk": "^3.0.0",
     "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "fancy-log": "^1.3.3",
     "husky": "^3.0.9",
+    "jest": "^26.6.3",
     "lerna": "^3.18.3",
     "lint-staged": "^9.5.0",
     "prettier": "^1.18.2",
@@ -62,11 +65,12 @@
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-typescript2": "0.17.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.2",
-    "typescript-json-schema": "^0.40.0",
+    "typescript": "^4.1.2",
+    "typescript-json-schema": "^0.44.1",
     "webpack": "^4.41.2",
     "webpack-command": "^0.5.0"
   },
