--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "files": [],
   "references": [
-    { "path": "packages/apigw" },
     { "path": "packages/cos" },
     { "path": "packages/capi" },
+    { "path": "packages/faas" },
     { "path": "packages/capi-web" }
   ]
 }
