--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "rimraf": "^3.0.0",
     "rollup": "0.66.6",
     "rollup-plugin-alias": "^1.4.0",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-commonjs": "8.4.1",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
