--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -31,6 +31,8 @@
   },
   "homepage": "https://github.com/yugasun/tencent-sdk#readme",
   "dependencies": {
-    "@tencent-sdk/capi": "^1.1.8"
+    "@tencent-sdk/capi": "^1.1.8",
+    "camelcase": "^6.2.0",
+    "type-fest": "^1.0.2"
   }
 }
