--- a/packages/faas/package.json
+++ b/packages/faas/package.json
@@ -36,6 +36,7 @@
     "@tencent-sdk/cls": "0.2.1",
     "@tencent-sdk/common": "0.1.0",
     "camelcase": "^6.2.0",
-    "dayjs": "^1.10.4"
+    "dayjs": "^1.10.4",
+    "got": "^11.8.2"
   }
 }
